# docker-ref

./: README.md
apps/go/: .gitignore  Dockerfile  Dockerfile.upx  go.mod  main.go
apps/nextjs/: Dockerfile
apps/rust/: Cargo.toml  Dockerfile  Dockerfile.optimize
apps/rust/src/: main.rs
