[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = true
# https://nnethercote.github.io/perf-book/build-configuration.html#minimizing-binary-size
opt-level = "s"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
